Removed/fixed background-image from home page on smaller screens

--- a/assets/css/_pages/_home.scss
+++ b/assets/css/_pages/_home.scss
@@ -4,7 +4,6 @@
     color: $green;
     background: $cream;
     background-blend-mode: multiply;
-    background-image: url(../images/mug-1x.png);
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: 40%;
@@ -31,14 +30,6 @@
       &:hover, &:focus {color: $orange;}
     }
   }
-}
-
-@media (min-width: 48rem) {
-  .banner.home {background-image: url(../assets/images/mug-2x.png);}
-}
-
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .banner.home {background-image: url(../images/mug-2x.png);}
 }
 
 @media (min-width: 64rem) {
