--- a/assets/css/master.home.css
+++ b/assets/css/master.home.css
@@ -765,7 +765,6 @@ footer.error {
   color: #384332;
   background: #eef1e8;
   background-blend-mode: multiply;
-  background-image: url(../images/mug-1x.png);
   background-position: right bottom;
   background-repeat: no-repeat;
   background-size: 40%; }
@@ -792,14 +791,6 @@ footer.error {
     color: #384332; }
     .banner .scroll p a:hover, .banner .scroll p a:focus {
       color: #af4433; }
-
-@media (min-width: 48rem) {
-  .banner.home {
-    background-image: url(../assets/images/mug-2x.png); } }
-
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .banner.home {
-    background-image: url(../images/mug-2x.png); } }
 
 @media (min-width: 64rem) {
   .banner.home {
